@startuml
scale 450 width
title Order state machine

[*] --> Created
Created -> Paid : notify paid
Created --> Cancelled : cancel order
Cancelled --> [*]
Paid -> InDelivery : article shipped
InDelivery --> Received : sign for
Received --> Confirmed : confirm order
Confirmed --> [*]

center footer Generated for demonstration
@enduml